# claude-code-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
claude_code_mcp/: __init__.py  metadata.py  parser.py  server.py  session.py
claude_tmux_mcp/: __init__.py  __main__.py  metadata.py  parser.py  server.py  session.py
tests/: test_integration.py  test_parser.py  test_session_logic.py
