[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-code-mcp"
version = "0.1.0"
description = "MCP server giving orchestrator agents fine-grained control over interactive Claude Code sessions via tmux"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["mcp", "claude", "tmux", "ai", "agent", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
claude-code-mcp = "claude_code_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/joschi655/claude-code-mcp"
Repository = "https://github.com/joschi655/claude-code-mcp"
Issues = "https://github.com/joschi655/claude-code-mcp/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["claude_code_mcp"]
